Trying to make this work with RawGit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   
   
-  <a-sky src="ColeCrouch.github.io/29173852033_2d1c8cdfa4_o (4).jpg"></a-sky>
+  <a-sky src="MyReality/29173852033_2d1c8cdfa4_o (4).jpg"></a-sky>
   
   
 </a-scene>
