--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <a-scene>
 
   
- <a-sphere position="6 0.75 -5" rotation="0 45 0" width="1" height="1" depth="1" color="#ff9900"></a-box>
+ <a-sphere position="6 0.75 -5" rotation="0 45 0" width="1" height="1" depth="1" color="#ff9900"></a-sphere>
+  
+  <a-collada-model src="ColeCrouch.github.io/model.dae" position="0 0 -6"></a-collada-model>
   
   <a-curvedimage src="ColeCrouch.github.io/Test with grey spray back.png" radius="5.7" theta-length="72" height="2.6"
                      rotation="0 100 0" position="0 1.5 2.1" scale="0.6 0.6 0.6"></a-curvedimage>
