--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <a-collada-model src="ColeCrouch.github.io/model.dae" position="0 0 -6"></a-collada-model>
   
-  <a-curvedimage src="ColeCrouch.github.io/Test with grey spray back.png" radius="5.7" theta-length="72" height="2.6"
+  <a-curvedimage src="ColeCrouch.github.io/Test with grey spray back v2.png" radius="5.7" theta-length="72" height="2.6"
                      rotation="0 100 0" position="0 1.5 2.1" scale="0.6 0.6 0.6"></a-curvedimage>
   
   <a-sky src="ColeCrouch.github.io/29173852033_2d1c8cdfa4_o (4).jpg"></a-sky>
