--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   
  <a-sphere position="6 0.75 -5" rotation="0 45 0" width="1" height="1" depth="1" color="#ff9900"></a-sphere>
   
+   <a-sky src="ColeCrouch.github.io/29173852033_2d1c8cdfa4_o (4).jpg"></a-sky>
+  
+  
   <a-collada-model src="ColeCrouch.github.io/model.dae" position="0 0 -6"></a-collada-model>
   
   <a-curvedimage src="ColeCrouch.github.io/Test with grey spray back v2.png" radius="5.7" theta-length="72" height="2.6"
