--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <a-scene>
 
   
- <a-sphere position="6 0.75 -5" rotation="0 45 0" width="1" height="1" depth="1" color="#ff9900"></a-sphere>
+ <a-sphere position="6 0.75 -5" width="1" height="1" depth="1" color="#ff9900"></a-sphere>
   
    <a-sky src="ColeCrouch.github.io/29173852033_2d1c8cdfa4_o (4).jpg"></a-sky>
   
@@ -15,8 +15,7 @@
   <a-curvedimage src="ColeCrouch.github.io/Test with grey spray back v2.png" radius="5.7" theta-length="72" height="2.6"
                      rotation="0 100 0" position="0 1.5 2.1" scale="0.6 0.6 0.6"></a-curvedimage>
   
-  <a-sky src="ColeCrouch.github.io/29173852033_2d1c8cdfa4_o (4).jpg"></a-sky>
-  
+
   
 </a-scene>
 </html>
